--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,75 @@
 <resources>
     <string name="app_name">Kucing &amp; Anjing Pedia</string>
+    
+    //data hewan
+    <string name="Angora_nama">Angora</string>
+    <string name="Angora_asal">Turki</string>
+    <string name="Angora_deskripsi">Aslinya berasal dari Ankara, Turki dengan ciri khas berbulu panjang dan lembut</string>
+    <string name="Bengal_nama">Benggal</string>
+    <string name="Bengal_asal">Inggris</string>
+    <string name="Bengal_deskripsi">Merupakan hasil persilangan antara Kucing Leopard Asia dengan kucing domestik Inggris</string>
+    <string name="Birmani_nama">Birmani</string>
+    <string name="Birmani_asal">Birma/Myanmar</string>
+    <string name="Birmani_deskripsi">Konon awalnya merupakan ras kucing yand biasa menemani para biksu yang menetap pada kuil di Birma</string>
+    <string name="Persia_nama">Persia</string>
+    <string name="Persia_asal">Iran</string>
+    <string name="Persia_deskripsi">Kucing berbulu panjang dengan wajah bundar dan hidung pesek. Awalnya berasal dari Iran kemudian diimpor ke Italia</string>
+    <string name="Siam_nama">Siam</string>
+    <string name="Siam_asal">Thailand</string>
+    <string name="Siam_deskripsi">Kucing hasil turunan dari Wichian Maat (Kucing Thailand) dengan ciri khas berbadan panjang dan langsing, wajah lonjong, telinga lebar, dan mata kebiruan</string>
+    <string name="Siberia_nama">Siberia</string>
+    <string name="Siberia_asal">Rusia</string>
+    <string name="Siberia_deskripsi">Kucing domestik Rusia dengan bulu lebat dan badan besar tapi sangat lincah dan terkenal dengan kemampuan melompatnya </string>
+    <string name="Bulldog_nama">Bulldog</string>
+    <string name="Bulldog_asal">Inggris</string>
+    <string name="Bulldog_deskripsi">Anjing populer yang dikenal dengan badan yang gemuk berotot, wajah seperti kain kusut, dan hidung yang pesek</string>
+    <string name="Husky_nama">Husky</string>
+    <string name="Husky_asal">Alaska,Siberia,Finlandia (daerah bersalju)</string>
+    <string name="Husky_deskripsi">Anjing jenis khusus yang awalnya digunakan untuk menarik kereta salju</string>
+    <string name="Kintamani_nama">Kintamani</string>
+    <string name="Kintamani_asal">Indonesia</string>
+    <string name="Kintamani_deskripsi">Ras anjing asli pulau Bali</string>
+    <string name="Samoyed_nama">Samaoyed</string>
+    <string name="Samoyed_asal">Rusia</string>
+    <string name="Samoyed_deskripsi">Anjing yang berasal dari Siberia yang awalnya biasa digunakan untuk menjaga ternak oleh suku Samoyed</string>
+    <string name="Shepherd_nama">Shepherd</string>
+    <string name="Shepherd_asal">Jerman</string>
+    <string name="Shepherd_deskripsi">Anjing pintar dan kuat, sekarang banyak digunakan sebagai anjing penjaga, pengawal, dan anjing polisi (K9)</string>
+    <string name="Shiba_nama">Shiba</string>
+    <string name="Shiba_asal">Jepang</string>
+    <string name="Shiba_deskripsi">Anjing dari daerah Shiba ini gesit dan lincah sehingga awalnya banyak digunakan untuk berburu</string>
+    <string name="Bali_nama">Bali</string>
+    <string name="Bali_asal">Bali</string>
+    <string name="Bali_deskripsi">Warna kulit sapi bali betina adalah merah kecokelatan, sedangkan pada sapi bali jantan yang sudah dewasa, warna sapi bali menjadi hitam</string>
+    <string name="Brahman_nama">Brahman</string>
+    <string name="Brahman_asal">India</string>
+    <string name="Brahman_deskripsi">Bobot sapi brahman jantan dewasa sekitar 800-1100 kilogram dengan tinggi badan hingga 168 sentimeter, sedangkan bobot sapi brahman betina yang sudah dewasa adalah 500-700 kilogram</string>
+    <string name="Limousin_nama">Limousin</string>
+    <string name="Limousin_Asal">Prancis</string>
+    <string name="Limousin_deskripsi">Sapi ini berwarna kuning kegelapan dan tipis serta warna bulu emas-merah yang warnanya lebih terang di bawah perut, paha dalam, sekitar mata dan moncong, di sekitar anus, dan ujung ekor</string>
+    <string name="Ongole_nama">Ongole</string>
+    <string name="Ongole_asal">Afrika</string>
+    <string name="Ongole_deskripsi">Sapi ongole memiliki sifat sabar dan tahan lapar, panas, serta haus sehingga cocok dijadikan sebagai sapi pekerja. Tidak hanya cocok sebagai sapi pekerja, sapi ongole juga merupakan sapi potong dan sapi perah yang dapat menghasilkan susu berkualitas baik</string>
+    <string name="Simmental_nama">Simmental</string>
+    <string name="Simmental_asal">Switzerland</string>
+    <string name="Simmental_deskripsi">Sapi simental digunakan untuk program grading up sapi lokal di Indonesia melalui inseminasi buatan dengan sapi peranakan ongole yang kemudian menghasilkan istilah sapi Simpo</string>
+
+
+    //Judul
+    <string name="judul_list_Anjing">DAFTAR RAS ANJING</string>
+    <string name="judul_list_Kucing">DAFTAR RAS KUCING</string>
+    <string name="judul_list_Sapi">DAFTAR RAS SAPI</string>
+    <string name="judul_Hewan">DAFTAR HEWAN</string>
+
+    //Jenis
+    <string name="jenis_Anjing">Anjing</string>
+    <string name="jenis_Kucing">Kucing</string>
+    <string name="jenis_Sapi">Sapi</string>
+
+    //String
+    <string name="notif">Tekan Gambar Untuk Membuka Galery</string>
+
+    
+    
+    
 </resources>
